# gpt-2-from-scratch

./: README.md  pyproject.toml
configs/: data_gen_pretraining_topics.json  example_config.yaml  gpt.yaml  gpt2_59m_10heads_10layers.yaml
notebooks/: bpe-tokenizer.ipynb  load_model.ipynb
scripts/: download_data.py  infere.py  train.py  train_instruct.py
src/config/: __init__.py  gpt_config.py
src/data/: bpe_tokenizer.py  dataloader.py  datasets.py  english_tokenizer.py  tokenizer.py
src/data/dataloader/: __init__.py  finetuning.py  pretraining.py
src/data/datasets/: __init__.py  base.py  instruction.py  pretraining.py
src/data/generator/: pretraining-data-gen.py  pretraining.py
src/data/tokenizers/: __init__.py  base.py  bpe_tokenizer.py
src/models/gpt/: __init__.py  gpt.py  layers.py
src/training/: checkpoint.py  loss.py  pretraining.py  trainer.py
tests/: demo_bpe_tokenizer.py  demo_tokenizer.py
